# c-neural-network

./: CMakeLists.txt  README.md
include/: app_state.h  gui.h  image_proc.h  mnist.h  nn.h  trainer.h  utils.h  visualizer.h
scripts/: data.py
src/: gui.c  image_proc.c  main.c  mnist.c  nn.c  trainer.c  utils.c  visualizer.c
